<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/downloadn"
    tools:context=".MainActivity">

    <!-- Add empty space above the page name -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Page name TextView -->

    <!-- Add empty space with weight to push elements to the top -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/novel_nest"
        android:textColor="#06166C"
        android:textSize="50sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_weight="1" />


    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genre"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pages"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <!-- Add empty space with weight to push elements to the bottom -->
    <View
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_weight="1" />


    <Button
        android:id="@+id/add_button"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/add_book1" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2580B1"
        android:text="@string/view_books" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="277dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
